--- a/style.css
+++ b/style.css
@@ -76,17 +76,23 @@ form button {
 .logos {
   position: absolute;
   top: 150px;
-  width: 100%;
+  left: 0;
+  right: 0;
   display: flex;
   justify-content: space-between;
-  padding: 0 100px;
+  align-items: center;
+  padding: 0 80px;
+  z-index: 1;
 }
 
 .logo {
   width: 140px;
   height: auto;
   display: block;
+  object-fit: contain;
+  z-index: 1;
 }
+
 
 .vs-bar {
   position: absolute;
