--- a/style.css
+++ b/style.css
@@ -88,10 +88,10 @@ form button {
 .logo {
   width: 200px;
   height: auto;
-  display: block;
   object-fit: contain;
-  z-index: 1;
   mix-blend-mode: multiply;
+  filter: drop-shadow(0 0 8px rgba(255, 255, 255, 0.4))
+  transition: filter 0.3s ease;
 }
 
 
