--- a/style.css
+++ b/style.css
@@ -89,10 +89,11 @@ form button {
   width: 200px;
   height: auto;
   object-fit: contain;
-  mix-blend-mode: multiply;
-  filter: drop-shadow(0 0 8px rgba(255, 255, 255, 0.4))
-  transition: filter 0.3s ease;
+  background-color: transparent;
+  box-shadow: 0 0 15px rgba(255, 255, 255, 0.6);
+  border-radius: 10px;
 }
+
 
 
 .vs-bar {
