--- a/style.css
+++ b/style.css
@@ -63,6 +63,14 @@ form button {
   padding: 40px;
   overflow: hidden;
 }
+#corner-logo {
+  position: absolute;
+  top: 20px;
+  left: 20px;
+  width: 80px;
+  height: auto;
+  z-index: 2;
+}
 
 .matchday {
   position: absolute;
