--- a/style.css
+++ b/style.css
@@ -5,6 +5,15 @@ body {
   color: white;
 }
 
+#corner-logo {
+  position: absolute;
+  top: 20px;
+  left: 20px;
+  width: 80px;
+  height: auto;
+  z-index: 2;
+}
+
 .container {
   display: flex;
   flex-wrap: wrap;
