--- a/style.css
+++ b/style.css
@@ -68,33 +68,35 @@ form button {
 .matchday-bar-container {
   position: absolute;
   top: 80px;
-  left: 300px;
-  width: 80%;
+  left: 0;
+  width: 100%;
   z-index: 2;
   display: flex;
   flex-direction: column;
   align-items: flex-start;
 }
 
+/* Pasek pod tekstem, wystaje 10px nad tekst, sciety 45 stopni */
+.matchday-bar {
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 80%;
+  height: 45px; /* 15px na pasek + 10px nad tekstem + 10px pod tekstem + trochę zapasu na scięcie */
+  background: #e32430; /* domyślnie czerwień ligi, JS zmienia na zieleń dla pucharu */
+  clip-path: polygon(0 0, 100% 0, 80% 100%, 0% 100%);
+  z-index: 1;
+}
+
 .matchday {
+  position: relative;
   font-size: 42px;
   font-weight: bold;
   color: #fff;
-  margin-bottom: 10px; /* 10px pod tekstem */
-  position: relative;
+  margin-top: 10px; /* odstęp od góry paska */
+  margin-left: 300px; /* ustaw tekst w odpowiednim miejscu na grafice */
+  margin-bottom: 10px; /* odstęp pod tekstem */
   z-index: 2;
-}
-
-/* Pasek pod tekstem, wystaje 10px nad tekst */
-.matchday-bar {
-  width: 80%; /* kończy się na 80% szerokości kontenera */
-  height: 15px;
-  background: #e32430; /* intensywna czerwień dla ligi, domyślnie */
-  border-radius: 0 40px 40px 0; /* lekko ścięty / zaokrąglony prawy koniec */
-  margin-top: -10px; /* wystaje 10px nad tekst */
-  margin-bottom: 0;
-  position: relative;
-  z-index: 1;
 }
 
 .logos {
