--- a/style.css
+++ b/style.css
@@ -66,7 +66,7 @@ form button {
 
 /* Pasek pod logiem ligi/pucharu */
 .matchday-bar {
-  position: absolute;
+  position: relative;
   left: 0;
   top: 110px; /* logo ma 80px wysokości + 20px top, pasek zaczyna się pod logo */
   width: 80%;
@@ -79,7 +79,7 @@ form button {
 /* Kontener na kolejkę */
 .matchday-bar-container {
   position: absolute;
-  top: 20px; /* logo + pasek odstęp */
+  top: 60px; /* logo + pasek odstęp */
   left: 300px;
   width: 80%;
   z-index: 2;
