--- a/style.css
+++ b/style.css
@@ -68,7 +68,7 @@ form button {
 .matchday-bar-container {
   position: absolute;
   top: 110px; /* logo ma 80px wysokości + 20px odstępu = 100px, pasek 10px niżej */
-  left: 150px;
+  left: 0px;
   width: 100%;
   z-index: 2;
   pointer-events: none;
@@ -91,6 +91,7 @@ form button {
   font-size: 42px;
   font-weight: bold;
   color: #fff;
+  margin-left: 100px;
   margin-bottom: 10px;
   z-index: 2;
 }
