--- a/style.css
+++ b/style.css
@@ -67,7 +67,7 @@ form button {
 /* Pasek pod tekstem kolejki, NIE przykrywa logo, zaczyna się od lewej krawędzi grafiki */
 .matchday-bar-container {
   position: absolute;
-  top: 40px; /* logo ma 80px wysokości + 20px odstępu = 100px, pasek 10px niżej */
+  top: 60px; /* logo ma 80px wysokości + 20px odstępu = 100px, pasek 10px niżej */
   left: 0px;
   width: 100%;
   z-index: 2;
@@ -78,7 +78,7 @@ form button {
   position: absolute;
   left: 0;
   top: 0;
-  width: 80%;
+  width: 90%;
   height: 85px;
   background: #e4022e; /* kolor zmieniany w JS dla pucharu */
   clip-path: polygon(0 0, 100% 0, 95% 100%, 0% 100%);
@@ -91,6 +91,7 @@ form button {
   font-size: 42px;
   font-weight: bold;
   color: #fff;
+  margin-top: 10px;
   margin-left: 200px;
   margin-bottom: 10px;
   z-index: 2;
