--- a/style.css
+++ b/style.css
@@ -91,8 +91,8 @@ left: 0;
 top: 0;
 width: 90%;
 height: 85px;
-  background: #e4022ecc; /* kolor zmieniany w JS dla pucharu */
-  background: #e4022ecc;
+  background: #e4022e; /* kolor zmieniany w JS dla pucharu */
+  background: #e4022e;
 clip-path: polygon(0 0, 100% 0, 95% 100%, 0% 100%);
 z-index: 1;
 pointer-events: none;
