--- a/style.css
+++ b/style.css
@@ -7,10 +7,10 @@ body {
 
 .container {
   display: flex;
-  flex-wrap: wrap;
   gap: 40px;
   padding: 40px;
   justify-content: center;
+  align-items: flex-start;
 }
 
 form {
@@ -66,8 +66,8 @@ form button {
 .poster {
   width: 1200px;
   height: 630px;
-  background: url('assets/bg_liga.png') no-repeat center center;
-  background-size: cover;
+  background: url('assets/bg_liga.png') no-repeat;
+  background-size: 1200px 630px;
   position: relative;
   box-sizing: border-box;
   padding: 40px;
@@ -78,7 +78,8 @@ form button {
   position: absolute;
   top: 60px;
   left: 0;
-  width: 100%;
+  width: 1200px;
+  height: 85px;
   z-index: 2;
   pointer-events: none;
 }
@@ -87,32 +88,30 @@ form button {
   position: absolute;
   left: 0;
   top: 0;
-  width: 90%;
+  width: 1080px;
   height: 85px;
   z-index: 1;
   pointer-events: none;
 }
 
 .matchday {
-  position: relative;
+  position: absolute;
+  top: 17px;
+  left: 200px;
   font-size: 42px;
   font-weight: bold;
   color: #fff;
-  margin-top: 17px;
-  margin-left: 200px;
-  margin-bottom: 10px;
   z-index: 2;
 }
 
 .logos {
   position: absolute;
   top: 170px;
-  left: 0;
-  right: 0;
+  left: 250px;
+  width: 700px;
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 0 250px;
   z-index: 1;
 }
 
@@ -127,7 +126,7 @@ form button {
   position: absolute;
   bottom: 125px;
   left: 10px;
-  right: 10px;
+  width: 1180px;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -157,7 +156,7 @@ form button {
   position: absolute;
   bottom: 40px;
   left: 10px;
-  right: 10px;
+  width: 1180px;
   display: flex;
   justify-content: space-around;
   background: rgba(0, 0, 0, 0.7);
