--- a/style.css
+++ b/style.css
@@ -66,7 +66,8 @@ form button {
 .poster {
   width: 1200px;
   height: 630px;
-  background: url('assets/bg_liga.png') no-repeat;
+  background-repeat: no-repeat;
+  background-position: center;
   background-size: 1200px 630px;
   position: relative;
   box-sizing: border-box;
