--- a/style.css
+++ b/style.css
@@ -128,6 +128,7 @@ form button {
   position: absolute;
   bottom: 125px;
   left: 10px;
+  right: 10px;
   width: 1180px;
   display: flex;
   justify-content: center;
@@ -158,6 +159,7 @@ form button {
   position: absolute;
   bottom: 40px;
   left: 10px;
+  right: 10px;
   width: 1180px;
   display: flex;
   justify-content: space-around;
