--- a/style.css
+++ b/style.css
@@ -124,12 +124,14 @@ form button {
   filter: drop-shadow(0 0 6px rgba(255, 255, 255, 0.6));
 }
 
-.vs-bar {
+
+vs-bar {
   position: absolute;
   bottom: 125px;
-  left: 10px;
-  right: 10px;
   width: 1180px;
+  left: 0;
+  right: 0;
+  margin: 0 auto;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -141,6 +143,7 @@ form button {
   border-radius: 10px;
   text-align: center;
 }
+
 
 .vs {
   color: #ffcc00;
@@ -158,15 +161,17 @@ form button {
 .info-bar {
   position: absolute;
   bottom: 40px;
-  left: 10px;
-  right: 10px;
   width: 1180px;
+  left: 0;
+  right: 0;
+  margin: 0 auto;
   display: flex;
   justify-content: space-around;
   background: rgba(0, 0, 0, 0.7);
   padding: 20px;
   border-radius: 10px;
 }
+
 
 .info {
   display: flex;
