--- a/style.css
+++ b/style.css
@@ -124,14 +124,11 @@ form button {
   filter: drop-shadow(0 0 6px rgba(255, 255, 255, 0.6));
 }
 
-
-vs-bar {
+.vs-bar {
   position: absolute;
   bottom: 125px;
-  width: 1180px;
-  left: 0;
-  right: 0;
-  margin: 0 auto;
+  left: 10px;
+  right: 10px;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -143,7 +140,6 @@ vs-bar {
   border-radius: 10px;
   text-align: center;
 }
-
 
 .vs {
   color: #ffcc00;
@@ -161,17 +157,14 @@ vs-bar {
 .info-bar {
   position: absolute;
   bottom: 40px;
-  width: 1180px;
-  left: 0;
-  right: 0;
-  margin: 0 auto;
+  left: 10px;
+  right: 10px;
   display: flex;
   justify-content: space-around;
   background: rgba(0, 0, 0, 0.7);
   padding: 20px;
   border-radius: 10px;
 }
-
 
 .info {
   display: flex;
