--- a/style.css
+++ b/style.css
@@ -64,18 +64,23 @@ form button {
   background: #00cc66;
 }
 
+/* PODGLĄD */
 .poster-wrapper {
   transform: scale(0.5);
   transform-origin: top left;
+  background: #333;
+  padding: 0;
 }
 
+/* PEŁNY PLAKAT */
 .poster {
+  width: 1200px;
+  height: 630px;
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
   position: relative;
   box-sizing: border-box;
-  padding: 0;
   overflow: hidden;
 }
 
@@ -91,13 +96,8 @@ form button {
 }
 
 .matchday-bar {
-  position: absolute;
-  left: 0;
-  top: 0;
   width: 100%;
   height: 85px;
-  z-index: 1;
-  pointer-events: none;
 }
 
 .matchday {
@@ -114,14 +114,13 @@ form button {
 .logos {
   position: absolute;
   top: 170px;
-  left: 0;
-  width: 100%;
-  padding: 0 250px;
+  left: 50%;
+  width: 700px;
+  transform: translateX(-50%);
   display: flex;
   justify-content: space-between;
   align-items: center;
   z-index: 1;
-  box-sizing: border-box;
 }
 
 .logo {
@@ -150,19 +149,6 @@ form button {
   box-sizing: border-box;
 }
 
-.vs {
-  color: #ffcc00;
-  min-width: 60px;
-}
-
-.team {
-  flex: 1;
-  text-align: center;
-  white-space: nowrap;
-  overflow: hidden;
-  text-overflow: ellipsis;
-}
-
 /* Pasek informacji */
 .info-bar {
   position: absolute;
@@ -175,6 +161,19 @@ form button {
   padding: 20px;
   border-radius: 10px;
   box-sizing: border-box;
+}
+
+.vs {
+  color: #ffcc00;
+  min-width: 60px;
+}
+
+.team {
+  flex: 1;
+  text-align: center;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 
 .info {
