--- a/style.css
+++ b/style.css
@@ -84,7 +84,6 @@ form button {
   pointer-events: none;
 }
 
-/* Wersja SVG paska z ukośnym zakończeniem */
 .matchday-bar {
   position: absolute;
   left: 0;
@@ -93,7 +92,10 @@ form button {
   height: 85px;
   z-index: 1;
   pointer-events: none;
+  background: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" width="100%" height="85"><polygon points="0,0 100%,0 90%,85 0,85" fill="%23ff0000"/></svg>') no-repeat;
+  background-size: cover;
 }
+
 
 .matchday {
   position: relative;
