--- a/style.css
+++ b/style.css
@@ -83,14 +83,14 @@ form button {
   pointer-events: none;
 }
 
+
 .matchday-bar {
   position: relative;
   width: 90%;
   height: 85px;
-  background: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" width="100%" height="85"><polygon points="0,0 100,0 90,85 0,85" fill="%23002b5c"/></svg>') no-repeat;
-  background-size: cover;
   z-index: 1;
   pointer-events: none;
+  display: block;
 }
 
 
