--- a/style.css
+++ b/style.css
@@ -76,24 +76,24 @@ form button {
 /* Pasek pod tekstem kolejki, NIE przykrywa logo, zaczyna się od lewej krawędzi grafiki */
 .matchday-bar-container {
   position: absolute;
-  top: 60px; /* logo ma 80px wysokości + 20px odstępu = 100px, pasek ~10px niżej */
+  /* logo ma 80px wysokości + 20px odstępu = 100px, pasek ~10px niżej */
+  top: 60px;
   left: 0;
   width: 100%;
   z-index: 2;
   pointer-events: none;
 }
 
-
+/* Wersja SVG paska z ukośnym zakończeniem */
 .matchday-bar {
-  position: relative;
+  position: absolute;
+  left: 0;
+  top: 0;
   width: 90%;
   height: 85px;
   z-index: 1;
   pointer-events: none;
-  display: block;
 }
-
-
 
 .matchday {
   position: relative;
