--- a/style.css
+++ b/style.css
@@ -75,10 +75,9 @@ form button {
   overflow: hidden;
 }
 
-/* Pasek pod tekstem kolejki, NIE przykrywa logo, zaczyna się od lewej krawędzi grafiki */
+/* Pasek i tekst kolejki */
 .matchday-bar-container {
   position: absolute;
-  /* logo ma 100px wysokości ~ tu pasek nie koliduje */
   top: 60px;
   left: 0;
   width: 100%;
@@ -86,13 +85,15 @@ form button {
   pointer-events: none;
 }
 
-/* Wersja SVG paska z ukośnym zakończeniem */
+/* Pasek z ukośnym zakończeniem (bez SVG) */
 .matchday-bar {
   position: absolute;
   left: 0;
   top: 0;
   width: 90%;
   height: 85px;
+  background-color: #e4022e; /* czerwony jako domyślny */
+  clip-path: polygon(0 0, 100% 0, 90% 100%, 0 100%);
   z-index: 1;
   pointer-events: none;
 }
